templates names changed

--- a/src/templates/_base.njk
+++ b/src/templates/_base.njk
@@ -35,7 +35,7 @@
         {% block content %}{% endblock %}
         <footer class="bg-warning mt-3 p-3">
             <div class="hstack gap-3">
-                <div class="bg-warning">&copy;Eshadesign</div>
+                <div class="bg-warning">&copy;</div>
                 <div class="bg-warning ms-auto">
                     <a class="nav-link" aria-current="page" href="/">Úvod</a>
                 </div>
